# evm-tracker

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/alembic/: README  env.py
backend/alembic/versions/: ff23233d9748_initial_models.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: activities.py  projects.py  router.py
backend/app/core/: config.py  constants.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  activity.py  project.py
backend/app/schemas/: activity.py  evm.py  project.py
backend/app/services/: activity_service.py  evm_service.py  project_service.py
backend/tests/api/: conftest.py  test_activities.py  test_projects.py
backend/tests/unit/: test_backend_app.py  test_evm_service.py  test_quality_tooling_config.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ActivityForm.tsx  ActivityTable.tsx  Dashboard.tsx  EVMVisualizations.tsx  Header.tsx  ProjectKPIs.tsx  ProjectModal.tsx  Sidebar.tsx  ThemeToggle.tsx
frontend/src/components/charts/: ActivityBarChart.tsx  BACDonutChart.tsx  ChartCard.tsx  GlassTooltip.tsx  HealthRadarChart.tsx  SCurveChart.tsx
frontend/src/components/ui/: EmptyState.tsx  HealthBadge.tsx  Skeleton.tsx
frontend/src/hooks/: useCreateActivity.ts  useCreateProject.ts  useDeleteActivity.ts  useDeleteProject.ts  useProject.ts  useProjects.ts  useUpdateActivity.ts
frontend/src/lib/: api-client.ts  query-client.ts  query-keys.ts
frontend/src/services/: activities.ts  projects.ts
frontend/src/types/: index.ts
openspec/changes/activity-performance-chart/: design.md  explore.md  proposal.md  spec.md  tasks.md
openspec/changes/archive/2026-04-26-feature-backend-core/: verify-report.md
openspec/changes/archive/2026-04-27-api-state-layer/: design.md  proposal.md  tasks.md  verify-report.md
openspec/changes/archive/2026-04-27-app-shell-layout/: design.md  proposal.md  tasks.md  verify-report.md
openspec/changes/archive/2026-04-27-crud-interactions/: design.md  proposal.md  tasks.md  verify-report.md
openspec/changes/archive/2026-04-27-feature-api-controllers/: proposal.md  tasks.md  verify-report.md
openspec/changes/archive/2026-04-27-feature-api-integration/: design.md  walkthrough.md
openspec/changes/archive/2026-04-27-frontend-foundation/: design.md  proposal.md  tasks.md  verify-report.md
openspec/changes/archive/2026-04-27-performance-charts/: design.md  proposal.md  tasks.md  verify-report.md
openspec/changes/archive/2026-04-27-project-kpis/: design.md  proposal.md  tasks.md  verify-report.md
openspec/changes/archive/2026-04-27-project-management/: design.md  proposal.md  tasks.md  verify-report.md
openspec/changes/archive/feature-api-integration/: proposal.md
openspec/changes/feature-api-integration/: spec.md  tasks.md
openspec/changes/feature-backend-core/: proposal.md  tasks.md
openspec/specs/architecture/: api_design.md  database_schema.md  quality_standards.md
openspec/specs/frontend/architecture/: api_client.md  state_management.md
openspec/specs/frontend/components/: activity_form.md  activity_table.md  evm_visualizations.md  health_badge.md  project_kpis.md  sidebar.md  theme_toggle.md
openspec/specs/frontend/pages/: dashboard.md
openspec/specs/frontend/ux/: visual_standards.md
openspec/specs/planning/: roadmap.md
openspec/specs/product/: business_rules.md
scripts/: init_db.sql
